# Oopis-OS-DEV

./: .gitignore  electron.js  index.html  main.css  marked.min.js  package.json  preload.js
docs/: README.md  guide.md  security.md  taco.md
extras/: deflate.sh  diag.sh  inflate.sh
public/: index.html  main.css
public/docs/: README.md
public/scripts/: group_manager.js  output_manager.js  storage.js
public/scripts/commands/: awk.js  backup.js  bc.js  check_fail.js  curl.js  diff.js  explore.js  export.js  gemini.js  groups.js  log.js  mv.js  ocrypt.js  passwd.js  ps.js  pwd.js  restore.js  run.js  sort.js  uniq.js  unzip.js  usermod.js  xor.js  zip.js
scripts/: BasicInterpreter.js  commexec.js  config.js  error_handler.js  fs_manager.js  lexpar.js  main.js  message_bus_manager.js  modal_manager.js  output_manager.js  session_manager.js  storage.js  sudo_manager.js  terminal_manager.js  terminal_ui.js  user_manager.js  utils.js
scripts/apps/: app.js
scripts/apps/adventure/: AdventureCreator.js  adventure.css  adventure_create.js  (+4 more)
scripts/commands/: adventure.js  alias.js  awk.js  backup.js  base64.js  basic.js  bc.js  cat.js  cd.js  check_fail.js  chgrp.js  chidi.js  chmod.js  chown.js  cksum.js  clear.js  clearfs.js  code.js  cp.js  csplit.js  curl.js  date.js  delay.js  df.js  diff.js  du.js  echo.js  edit.js  explore.js  export.js  find.js  gemini.js  grep.js  groupadd.js  groupdel.js  groups.js  head.js  help.js  history.js  kill.js  (+51 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+39 files in other folders)
